add rest endpoints
