# routes/api.php
@@ -14,13 +14,14 @@
 
 // API
 
+Route::get('route/uri', [\MbcApiContent\Http\Controllers\Api\RouteController::class, 'showByUri']);
 Route::get('route/{route}/full', [\MbcApiContent\Http\Controllers\Api\RouteController::class, 'showComplete']);
 Route::get('route/full', [\MbcApiContent\Http\Controllers\Api\RouteController::class, 'indexComplete']);
 
 Route::get('page/{page}/full', [\MbcApiContent\Http\Controllers\Api\PageController::class, 'showComplete']);
 Route::get('page/full', [\MbcApiContent\Http\Controllers\Api\PageController::class, 'indexComplete']);
 
-Route::get('page-content/{page-content}/full', [\MbcApiContent\Http\Controllers\Api\PageContentController::class, 'showComplete']);
+Route::get('page-content/{page_content}/full', [\MbcApiContent\Http\Controllers\Api\PageContentController::class, 'showComplete']);
 Route::get('page-content/full', [\MbcApiContent\Http\Controllers\Api\PageContentController::class, 'indexComplete']);
 
 
